# bbcode-rs

./: .gitignore  CLAUDE.md  Cargo.toml
benches/: parsing.rs
examples/: attach.rs  debug.rs  xss_check.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_html_escape.rs  fuzz_img.rs  fuzz_style.rs  fuzz_target_1.rs  fuzz_url.rs
src/: ast.rs  error.rs  lib.rs  parser.rs  renderer.rs  tags.rs  tokenizer.rs
tests/: compat.rs  integration.rs  proptest.rs  security_advanced.rs
